<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.ResetPasswordActivity">

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:src="@drawable/ic_back_arrow" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        android:text="@string/password_updated"
        android:textColor="#182722"
        android:textSize="32sp" />

    <ImageView
        android:layout_gravity="center_horizontal"
        android:src="@drawable/password_updated"
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/password_updated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/your_password_updated"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnLoginPasswordUpdated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"
        android:background="@drawable/rectangle_green"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>