<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_rectangle"
        app:cardElevation="@dimen/cardview_default_elevation">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/dp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:src="@drawable/profile_pic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/dp"
                android:text="@string/profile_name"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/location"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/location"
                android:layout_marginBottom="10dp"
                android:layout_toStartOf="@id/dropDown"
                android:text="@string/person_location"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/dropDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/location"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/ic_drop_down" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/explore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardView"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/explore_fitness_options_near_you"
        android:textColor="@color/light_black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/relative_layout_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/explore"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/ivGyms"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:alpha="0.6"
            android:background="@drawable/gyms"
            android:backgroundTint="@color/black"
            android:backgroundTintMode="screen" />

        <TextView
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:background="@color/cardview_shadow_start_color"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:backgroundTintMode="add"
            android:gravity="center"
            android:text="@string/gyms"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivFitnessStudio"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/ivGyms"
            android:alpha="0.6"
            android:background="@drawable/fitness_studio"
            android:backgroundTint="@color/black"
            android:backgroundTintMode="screen" />

        <TextView
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/ivGyms"
            android:background="@color/cardview_shadow_start_color"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:backgroundTintMode="add"
            android:gravity="center"
            android:text="@string/fitness_studio"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_layout_one"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/ivYogaClasses"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:alpha="0.6"
            android:background="@drawable/yoga_classes"
            android:backgroundTint="@color/black"
            android:backgroundTintMode="screen" />

        <TextView
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:background="@color/cardview_shadow_start_color"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:backgroundTintMode="add"
            android:gravity="center"
            android:text="@string/yoga_classes"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivAerobicClasses"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/ivYogaClasses"
            android:alpha="0.6"
            android:background="@drawable/aerobic_classes"
            android:backgroundTint="@color/black"
            android:backgroundTintMode="screen" />

        <TextView
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/ivYogaClasses"
            android:background="@color/cardview_shadow_start_color"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:backgroundTintMode="add"
            android:gravity="center"
            android:text="@string/aerobic_classes"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_layout_two"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/ivMartialArtClasses"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:alpha="0.6"
            android:background="@drawable/martial_art_classes"
            android:backgroundTint="@color/black"
            android:backgroundTintMode="screen" />

        <TextView
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:background="@color/cardview_shadow_start_color"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:backgroundTintMode="add"
            android:gravity="center"
            android:text="@string/martial_art_classes"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivZumbaClasses"
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/ivMartialArtClasses"
            android:alpha="0.6"
            android:background="@drawable/zumba_classes"
            android:backgroundTint="@color/black"
            android:backgroundTintMode="add" />

        <TextView
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/ivMartialArtClasses"
            android:background="@color/cardview_shadow_start_color"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:backgroundTintMode="add"
            android:gravity="center"
            android:text="@string/zumba_classes"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/clubs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_layout_three"
        android:layout_marginStart="15dp"
        android:text="@string/exclusive_gofit_clubs"
        android:textColor="@color/light_black"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>